Player login working. Able to retrieve cards and give 2 cards to each player

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon Server/routes.js",
-    "build": "npx webpack --config webpack.config.js --watch"
+    "build": "npx webpack --config webpack.config.js --watch",
+    "seed": "node Database/gameSeed.js"
   },
   "repository": {
     "type": "git",
