--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
+    "newrelic": "^7.1.1",
     "nodemon": "^2.0.7",
     "pokersolver": "^2.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-jss": "^10.5.1",
-    "react-pure-render": "^1.0.2"
+    "react-pure-render": "^1.0.2",
+    "shuffle": "^0.2.5"
   },
   "devDependencies": {
     "webpack": "^5.21.2",
